# hinana

./: .env.example  .gitignore  CLAUDE.md  README.md  make_template.py  pyproject.toml  setup.sh
demo/: spica-terrible-furigana.ass  spica-terrible-input.ass  spica-terrible-lyrics.txt  spica-terrible-romaji.ass
jpkara/: __init__.py  ass_reader.py  cli.py  pipeline.py
jpkara/ass/: __init__.py  constants.py  formatter.py  yohane_runner.py
jpkara/reading/: __init__.py  analyzer.py  kana.py  llm.py  mecab_tokenizer.py  rl_dict.py
tests/: test_reading.py
