[project]
name = "hinana"
version = "0.1.0"
description = "Hierarchical Interlinear Nihongo Annotation via Neural Alignment — 日语卡拉OK注音工具"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pykakasi>=2.2",
    "python-dotenv>=1.0",
    # yohane and its deps are expected to be installed in the same venv
    # Install manually: uv pip install -e /path/to/yohane[cli]
]

[project.optional-dependencies]
mecab = ["fugashi>=1.3", "unidic-lite>=1.0"]
dev = ["pytest>=8", "ruff"]

[project.scripts]
hinana = "jpkara.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jpkara"]

[tool.ruff.lint]
extend-select = ["I"]
